--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-HOST_NAME:http://localhost:3000
+HOST_NAME = http://localhost:3000
+API_KEY = OxeU2JhaT9q4mtagf1rBVw
+API_SECRET = l3vpXCZz396qPXWXgd39aqGUcgugiUvBVfwA
